--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing Documentation
 Version:	0.33
-Release:	0.t250%{?dist}
+Release:	0.t251%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -175,6 +175,7 @@ rm -rf $RPM_BUILD_ROOT
 - Added call to aspell to spell check.
 - Fixed incorrect other credit title in PDF. BZ #454394
 - Turned on Hyphenation to split verbatim lines.
+- TEST saxon & syntax highlighting
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
