add syntax highlighting
git-svn-id: file:///srv/svn/publican/trunk@349 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Makefile
+++ b/publican/Makefile
@@ -55,12 +55,12 @@ srpm: dist
 	@sed -i -e 's/@VENDOR@/redhat/' $(RPMDIR)/SPECS/$(NAME).el5.spec
 	@sed -i -e 's/@EMBED45@/1/' $(RPMDIR)/SPECS/$(NAME).el5.spec
 	@sed -i -e 's/@HTMLVIEW@/1/' $(RPMDIR)/SPECS/$(NAME).el5.spec
-	@sed -i -e 's/@PRERETARDS@/1/' $(RPMDIR)/SPECS/$(NAME).el5.spec
+	@sed -i -e 's/@PREMOLESTATION@/1/' $(RPMDIR)/SPECS/$(NAME).el5.spec
 	@cp publican.spec.in $(RPMDIR)/SPECS/$(NAME).spec
 	@sed -i -e 's/@VENDOR@/fedora/' $(RPMDIR)/SPECS/$(NAME).spec
 	@sed -i -e 's/@EMBED45@/1/' $(RPMDIR)/SPECS/$(NAME).spec
 	@sed -i -e 's/@HTMLVIEW@/0/' $(RPMDIR)/SPECS/$(NAME).spec
-	@sed -i -e 's/@PRERETARDS@/0/' $(RPMDIR)/SPECS/$(NAME).spec
+	@sed -i -e 's/@PREMOLESTATION@/0/' $(RPMDIR)/SPECS/$(NAME).spec
 	@if [ "$(OS_VER)" == "fc9" ]; then \
 		rpmbuild --define "dist .$(OS_VER)" --define "_topdir $(RPMDIR)" -bs $(RPMDIR)/SPECS/$(NAME).spec; \
 	else \
