--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -1,12 +1,12 @@
 %define	my_vendor @VENDOR@
 %define	EMBED_DOCKBOOK45 @EMBED45@
 %define	HTMLVIEW @HTMLVIEW@
-%define PRERETARDS @PRERETARDS@
+%define PREMOLESTATION @PREMOLESTATION@
 
 Name:		publican	
 Summary:	Common files and scripts for publishing Documentation
 Version:	0.33
-Release:	0.t253%{?dist}
+Release:	0.t261%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -19,16 +19,16 @@ Source:		https://fedorahosted.org/releases/p/u/publican/%{name}-%{version}.tgz
 Requires:	gettext libxslt perl(XML::TreeBuilder) docbook-style-xsl elinks aspell
 Requires:	%{_bindir}/xml2pot %{_bindir}/po2xml
 Requires:	perl-ParseLex perl-HTML-Template make
-Requires:	fop batik xalan-j2 ImageMagick
+Requires:	fop batik saxon ImageMagick xslthl
 
 BuildRequires:	gettext libxslt perl(XML::TreeBuilder) docbook-style-xsl aspell
 BuildRequires:	%{_bindir}/xml2pot %{_bindir}/po2xml
 BuildRequires:	desktop-file-utils
 # FOP is required to build the mont metrics.
-BuildRequires:	fop
-# Retards decided to rename font packages and change font paths.
+BuildRequires:	fop saxon xslthl
+# *&%^*&^ decided to rename font packages and change font paths.
 # No actual real changes.
-%if %{PRERETARDS}
+%if %{PREMOLESTATION}
 Requires:	fonts-bengali fonts-chinese fonts-chinese-zysong fonts-gujarati
 Requires:	fonts-hindi fonts-japanese fonts-kannada fonts-korean
 Requires:	fonts-malayalam fonts-oriya fonts-punjabi fonts-sinhala
@@ -175,7 +175,7 @@ rm -rf $RPM_BUILD_ROOT
 - Added call to aspell to spell check.
 - Fixed incorrect other credit title in PDF. BZ #454394
 - Turned on Hyphenation to split verbatim lines.
-- TEST saxon & syntax highlighting
+- Added code highlighting to CSS and PDF
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
