--- a/publican/xsl/CatalogManager.properties
+++ b/publican/xsl/CatalogManager.properties
@@ -1,4 +1,4 @@
-catalogs=/usr/share/publican/xsl/docbook/dtd-4.5/catalog.xml;/usr/share/publican/xsl/docbook/1.72.0/catalog.xml
+catalogs=/etc/xml/catalog;/usr/share/publican/xsl/docbook/dtd-4.5/catalog.xml;/usr/share/publican/xsl/docbook/1.72.0/catalog.xml
 relative-catalogs=false
 static-catalog=yes
 catalog-class-name=org.apache.xml.resolver.Resolver
