--- a/publican-redhat/make/Makefile.RedHat
+++ b/publican-redhat/make/Makefile.RedHat
@@ -1,6 +1,3 @@
-# Overide catalog.
-CATALOGS	= XML_CATALOG_FILES="$(COMMON_CONFIG)/xsl/docbook/dtd-4.5/catalog.xml $(COMMON_CONFIG)/xsl/docbook/1.72.0/catalog.xml"
-#XML_DEBUG_CATALOG=1
 
 DOC_URL		= http://www.redhat.com/docs
 STRICT		= 1
@@ -32,6 +29,7 @@ pre::
 		exit 3; \
 	fi
 
+############## OLD way (Single SRPM) to do XML desktop packages ######################
 old_spec:: xml-all
 	@echo "START: $@ `date`"
 	@rm -f tmp/subpackages.txt tmp/titles.txt tmp/changelog.txt
@@ -76,7 +74,8 @@ old_srpm:: clean old_spec
 	@rpmbuild --define "_topdir $(PWD)/tmp/rpm" -bs tmp/$(SPEC_NAME).spec
 	@echo "END: $@ `date`"
 
-#########################################################################
+#######################################################################################
+############## OLD way (Single SRPM) to do HTML desktop packages ######################
 
 old_spec2:: html-single-all
 	@echo "START: $@ `date`"
