add design  doco
git-svn-id: file:///srv/svn/publican/trunk@369 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -6,7 +6,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing Documentation
 Version:	0.33
-Release:	1.t7%{?dist}
+Release:	1.t8%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -180,6 +180,7 @@ rm -rf $RPM_BUILD_ROOT
 - Added code highlighting to CSS and PDF
 - Remove trailing '.' from formal para title. BZ #455826
 - Restructure CSS for easier maintenance of brands
+- Add documentation on publican design philosophy. BZ #456170
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
