Italicised package tag. BZ #442668
git-svn-id: file:///srv/svn/publican/trunk@370 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -181,6 +181,7 @@ rm -rf $RPM_BUILD_ROOT
 - Remove trailing '.' from formal para title. BZ #455826
 - Restructure CSS for easier maintenance of brands
 - Add documentation on publican design philosophy. BZ #456170
+- Italicised package tag. BZ #442668
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
