Updated docs section on Book_info.xml
git-svn-id: file:///srv/svn/publican/trunk@381 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -459,6 +459,8 @@ rm -rf $RPM_BUILD_ROOT
 - Added Legal_Notice to common
 - Moved balance of non-translatable entities out of Translatable-entities.ent, updated po files
 - Added missing Req perl-SGML-Translate, used for translation reports
+- Updated documentation descriptions of Book_Info.xml tags. BZ #456489 BZ #456488
+
 
 * Tue May 01 2007 Jeff Fearn <jfearn@redhat.com> 0.10
 - fix image dimensions on content/common/en-US/images/redhat-logo.svg
