Updated docs section on Book_info.xml
git-svn-id: file:///srv/svn/publican/trunk@382 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -184,6 +184,8 @@ rm -rf $RPM_BUILD_ROOT
 - Restructure CSS for easier maintenance of brands
 - Add documentation on publican design philosophy. BZ #456170
 - Italicised package tag. BZ #442668
+- Updated documentation descriptions of Book_Info.xml tags. BZ #456489 BZ #456488
+
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
