change font name
git-svn-id: file:///srv/svn/publican/trunk@387 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -44,12 +44,12 @@ BuildRequires:	fonts-tamil fonts-telugu liberation-fonts
 Requires:	lohit-fonts-bengali cjkunifonts-uming lohit-fonts-gujarati
 Requires:	lohit-fonts-hindi sazanami-fonts-gothic sazanami-fonts-mincho lohit-fonts-kannada
 Requires:	lohit-fonts-malayalam lohit-fonts-oriya lohit-fonts-punjabi lklug-fonts
-Requires:	lohit-fonts-tamil lohit-fonts-telugu liberation-fonts fonts-korean
+Requires:	lohit-fonts-tamil lohit-fonts-telugu liberation-fonts baekmuk-ttf-fonts-batang
 
 BuildRequires:	lohit-fonts-bengali cjkunifonts-uming lohit-fonts-gujarati
 BuildRequires:	lohit-fonts-hindi sazanami-fonts-gothic sazanami-fonts-mincho lohit-fonts-kannada
 BuildRequires:	lohit-fonts-malayalam lohit-fonts-oriya lohit-fonts-punjabi lklug-fonts
-BuildRequires:	lohit-fonts-tamil lohit-fonts-telugu liberation-fonts  fonts-korean
+BuildRequires:	lohit-fonts-tamil lohit-fonts-telugu liberation-fonts baekmuk-ttf-fonts-batang
 %endif
 
 URL:		https://fedorahosted.org/publican
