Set vertical-align:top for TD - BZ #457851
git-svn-id: file:///srv/svn/publican/trunk@388 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -145,7 +145,8 @@ rm -rf $RPM_BUILD_ROOT
 - Add missing xerces-j2 Requires. BZ #457497
 - Fixed css path for tranlation reports
 - Fixed font path for Fedora, ensured build fails if font metric creation fails. BX #458003
-
+- Set vertical-align:top for TD - BZ #457851
+ 
 * Fri Apr 11 2008 Jeff Fearn <jfearn@redhat.com> 0.34-0
 - Fix PO file name missing from translation status report
 - Modify xmlClean to output dummy content for empty files (beta)
